Code cleanup & added Drawer.